--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <div id="root">
-      <label for="ID">ID</label>
-      <input id="ID" type="submit" />
+      <form action="">
+        <label for="ID">ID</label>
+        <input id="ID" type="text" />
+        <input id="ID" type="submit" value="입력" />
+      </form>
     </div>
   </body>
 </html>
