서버 get 방식 작성1

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
-      <form action="">
+      <form action="" method="GET">
         <label for="ID">ID</label>
         <input id="ID" type="text" />
         <input id="ID" type="submit" value="입력" />
