예제만들어서 연습, post 해시부분을 변경하여 페이지를 이동함

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>페이지 연결 성공</h1>
-    <form action="submit" method="post">
+    <form action="sub" method="post">
       <label for="ID">ID</label>
       <input type="text" id="ID" />
       <button type="submit"></button>
