--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,32 @@
   </head>
   <body>
     <div id="root">
-      <form action="" method="GET">
+      <form id="myForm">
         <label for="ID">ID</label>
         <input id="ID" type="text" />
-        <input id="ID" type="submit" value="입력" />
+        <input type="button" value="입력" onclick="submitForm()" />
       </form>
     </div>
+
+    <script>
+      function submitForm() {
+        const idValue = document.getElementById("ID").value;
+        const formData = new FormData();
+        formData.append("ID", idValue);
+
+        fetch("/login", {
+          method: "POST",
+          body: formData,
+        })
+          .then((response) => response.text())
+          .then((data) => {
+            console.log(data);
+            // 여기에서 서버로부터 받은 응답에 따라 필요한 처리를 수행합니다.
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }
+    </script>
   </body>
 </html>
